--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.0",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "jquery": "^2.2.1",
     "serialport": "^2.0.6"
   }
 }
